--- a/src/views/homepage.html
+++ b/src/views/homepage.html
@@ -326,163 +326,12 @@
 				</div>
 				<div class="supporting_content">
 					<div class="supporting_content_left">
-						<div class="supporting_content_Az">
-							
+						
+						<div class="supporting_content_item">
+
 						</div>
 
-						<div class="supporting_content_VN">
-							<div class="VN1">
-								<h1>
-									<a
-										href="https://vnexpress.net/tang-truong-kinh-te-tren-10-de-thanh-nuoc-co-thu-nhap-cao-4833035.html"
-										>'Tăng trưởng kinh tế trên 10% để thành nước có thu nhập
-										cao'</a
-									>
-								</h1>
-							</div>
-							<div class="VN2">
-								<a
-									href="https://vnexpress.net/tang-truong-kinh-te-tren-10-de-thanh-nuoc-co-thu-nhap-cao-4833035.html"
-									><img
-										src="https://i1-kinhdoanh.vnecdn.net/2024/12/28/1182765029d2948ccdc3-173535721-3111-8262-1735360402.jpg?w=220&h=132&q=100&dpr=2&fit=crop&s=L1E5mVbsdSPcrvHulCXPwA"
-								/></a>
-								<p>
-									<a href="https://vnexpress.net/"
-										>Bộ trưởng Kế hoạch & Đầu tư Nguyễn Chí Dũng nói để năm 2045
-										thành nước có thu nhập cao, kinh tế Việt Nam cần phấn đấu
-										tăng trưởng trên hai chữ số.</a
-									>
-								</p>
-							</div>
-						</div>
-
-						<div class="supporting_content_GV">
-							<div class="GV1">
-								<h1>
-									<a
-										href="https://vnexpress.net/1-800-giao-vien-co-nguy-co-mat-thuong-4833004.html"
-										>1.800 giáo viên có nguy cơ mất thưởng</a
-									>
-								</h1>
-
-								<div class="GV2">
-									<a
-										href="https://vnexpress.net/kiem-trieu-usd-tu-tan-trang-quan-ao-giam-phat-thai-moi-truong-4833491.html"
-										><img
-											src="https://i1-vnexpress.vnecdn.net/2024/12/30/settop-1735550044-7549-1735550070.jpg?w=220&h=132&q=100&dpr=1&fit=crop&s=FPGVr7QAYC2V8KqLa6ajuQ"
-											style="width: 145px"
-									/></a>
-									<p>
-										<a
-											href="https://vnexpress.net/1-800-giao-vien-co-nguy-co-mat-thuong-4833004.html"
-											>Tối 27/12, một lãnh đạo phòng Giáo dục và Đào tạo huyện
-											Trà Ôn, cho biết thông tin trên. Tuần trước, cơ quan này
-											gửi văn bản đến Phòng Nội vụ đề nghị hướng dẫn thực hiện
-											chế độ tiền thưởng cho giáo viên theo Nghị định 73 của
-											Chính phủ.</a
-										>
-									</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="supporting_content_Az">
-							<div class="AZ">
-								<h1>
-									<a href="Người sống sót kể phút máy bay Azerbaijan gặp nạn"
-										>Người sống sót kể phút máy bay Azerbaijan gặp nạn</a
-									>
-								</h1>
-							</div>
-							<div class="AZ1">
-								<a
-									href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-									><img
-										src="https://i1-vnexpress.vnecdn.net/2024/12/28/2024-12-27t142242z-1595048295-9136-7103-1735353570.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=A7Ggtn2xa1P4CqOYAb91dg"
-								/></a>
-								<p>
-									<a
-										href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-										>Những người sống sót cho biết đã nghe tiếng nổ và thấy mảnh
-										vỡ xuyên vào cabin khi máy bay Azerbaijan Airlines gặp nạn ở
-										Kazakhstan hôm 25/12.</a
-									>
-								</p>
-							</div>
-						</div>
-						<div class="supporting_content_Az">
-							<div class="AZ">
-								<h1>
-									<a href="Người sống sót kể phút máy bay Azerbaijan gặp nạn"
-										>Người sống sót kể phút máy bay Azerbaijan gặp nạn</a
-									>
-								</h1>
-							</div>
-							<div class="AZ1">
-								<a
-									href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-									><img
-										src="https://i1-vnexpress.vnecdn.net/2024/12/28/2024-12-27t142242z-1595048295-9136-7103-1735353570.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=A7Ggtn2xa1P4CqOYAb91dg"
-								/></a>
-								<p>
-									<a
-										href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-										>Những người sống sót cho biết đã nghe tiếng nổ và thấy mảnh
-										vỡ xuyên vào cabin khi máy bay Azerbaijan Airlines gặp nạn ở
-										Kazakhstan hôm 25/12.</a
-									>
-								</p>
-							</div>
-						</div>
-						<div class="supporting_content_Az">
-							<div class="AZ">
-								<h1>
-									<a href="Người sống sót kể phút máy bay Azerbaijan gặp nạn"
-										>Người sống sót kể phút máy bay Azerbaijan gặp nạn</a
-									>
-								</h1>
-							</div>
-							<div class="AZ1">
-								<a
-									href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-									><img
-										src="https://i1-vnexpress.vnecdn.net/2024/12/28/2024-12-27t142242z-1595048295-9136-7103-1735353570.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=A7Ggtn2xa1P4CqOYAb91dg"
-								/></a>
-								<p>
-									<a
-										href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-										>Những người sống sót cho biết đã nghe tiếng nổ và thấy mảnh
-										vỡ xuyên vào cabin khi máy bay Azerbaijan Airlines gặp nạn ở
-										Kazakhstan hôm 25/12.</a
-									>
-								</p>
-							</div>
-							
-						</div>
-						<div class="supporting_content_Az1">
-							<div class="AZ">
-								<h1>
-									<a href="Người sống sót kể phút máy bay Azerbaijan gặp nạn"
-										>Người sống sót kể phút máy bay Azerbaijan gặp nạn</a
-									>
-								</h1>
-							</div>
-							<div class="AZ1">
-								<a
-									href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-									><img
-										src="https://i1-vnexpress.vnecdn.net/2024/12/28/2024-12-27t142242z-1595048295-9136-7103-1735353570.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=A7Ggtn2xa1P4CqOYAb91dg"
-								/></a>
-								<p>
-									<a
-										href="https://vnexpress.net/nguoi-song-sot-ke-phut-may-bay-azerbaijan-gap-nan-4832993.html"
-										>Những người sống sót cho biết đã nghe tiếng nổ và thấy mảnh
-										vỡ xuyên vào cabin khi máy bay Azerbaijan Airlines gặp nạn ở
-										Kazakhstan hôm 25/12.</a
-									>
-								</p>
-							</div>
-						</div>
+						
 					</div>
 					<div class="supporting_content_right">
 						<div class="CTR1">
@@ -520,12 +369,7 @@
 							<div class="ct1">
 								<div class="hagl">
 									<div class="hagl_img">
-										<a
-											href="https://vnexpress.net/doanh-nghiep-ong-tran-ba-duong-tra-cong-ty-bau-duc-hon-1-000-ty-dong-4833784.html"
-											><img
-												src="https://i1-kinhdoanh.vnecdn.net/2024/12/30/bau-duc-1735559213-9432-1735559468.jpg?w=380&h=228&q=100&dpr=1&fit=crop&s=0VK4bT6Hmq_2-0Gnic4WaQ"
-												style="width: 225px"
-										/></a>
+										
 									</div>
 									<div class="hagl_pr">
 										<h1>
@@ -597,7 +441,7 @@
 									</li>
 								</ul>
 							</nav>
-							<div class="border5"></div>
+							<div class="border4"></div>
 						</div>
 						<div class="laisuat">
 							<nav class="laisuat_1">
@@ -681,228 +525,177 @@
 								<ul class="small1">
 									<li class="small_iteam">
 										<a href="https://vnexpress.net/kinh-doanh"
-											><b>Kinh doanh</b></a
+											><b>Bất động sản </b></a
 										>
 									</li>
 									<li class="small_iteam">
 										<a href="https://vnexpress.net/kinh-doanh/quoc-te"
-											>Quốc tế</a
+											>Chính sách </a
 										>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Doanh nghiệp</a>
+										<a href="https://vnexpress.net/kinh-doanh">Thị trường</a>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Hàng hóa</a>
+										<a href="https://vnexpress.net/kinh-doanh">Dự án</a>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Vĩ mô</a>
+										<a href="https://vnexpress.net/kinh-doanh">Không gian sống</a>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Ebank</a>
+										<a href="https://vnexpress.net/kinh-doanh">Tư vấn</a>
 									</li>
-									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh"
-											>Hậu trường kinh doanh</a
-										>
-									</li>
+									
 								</ul>
 							</nav>
 							<div class="ct1">
-								<div class="hagl">
-									<div class="hagl_img">
-										<a
-											href="https://vnexpress.net/doanh-nghiep-ong-tran-ba-duong-tra-cong-ty-bau-duc-hon-1-000-ty-dong-4833784.html"
-											><img
-												src="https://i1-kinhdoanh.vnecdn.net/2024/12/30/bau-duc-1735559213-9432-1735559468.jpg?w=380&h=228&q=100&dpr=1&fit=crop&s=0VK4bT6Hmq_2-0Gnic4WaQ"
-												style="width: 225px"
-										/></a>
-									</div>
-									<div class="hagl_pr">
+								<div class="bds">
+									<div class="bds_img"></div>
+									<div class="bds_pr">
 										<h1>
-											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Doanh nghiệp ông Trần Bá Dương trả công ty bầu Đức
-												hơn 1.000 tỷ đồng</a
-											>
+											<a href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html">
+												Doanh nghiệp ông Trần Bá Dương trả công ty bầu Đức hơn 1.000 tỷ đồng
+											</a>
 										</h1>
 										<p>
-											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Hai ngày cuối năm, HAG đã được HNG trả hơn 1.000 tỷ
-												đồng để thanh toán một phần gốc lô trái phiếu do
-												công ty ...</a
-											>
+											<a href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html">
+												Hai ngày cuối năm, HAG đã được HNG trả hơn 1.000 tỷ đồng để thanh toán một phần gốc lô trái phiếu do công ty...
+											</a>
 										</p>
 									</div>
-									<div class="wl">
+									<div class="bds_right">
 										<h1>
-											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Cổ phiếu nhà phân phối ôtô điện Wuling tăng trần
-												liên tiếp</a
-											>
+											<a href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html">
+												Cổ phiếu nhà phân phối ôtô điện Wuling tăng trần liên tiếp
+											</a>
 										</h1>
 										<p>
-											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Cổ phiếu TMT Motors, nhà phân phối ôtô điện Wuling,
-												khoác sắc tím bốn phiên liền dù công ty thua lỗ
-												...</a
-											>
+											<a href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html">
+												Cổ phiếu TMT Motors, nhà phân phối ôtô điện Wuling, khoác sắc tím bốn phiên liền dù công ty thua lỗ...
+											</a>
 										</p>
 									</div>
 								</div>
 							</div>
 							<div class="border4"></div>
 							<nav class="jeju">
-								<ul class="jeju1">
-									<li class="jeju1_ct">
-										<a
-											href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html"
-											><b
-												>Hoàng Anh Gia Lai bị phạt<br />
-												và truy thu thuế gần một<br />
-												tỷ đồng</b
-											></a
-										>
+								<ul class="bds_bottom">
+									<li class="bds_ct">
+										<a href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html">
+											<b>Hoàng Anh Gia Lai bị phạt và truy thu thuế gần một tỷ đồng</b>
+										</a>
 									</li>
-									<li class="jeju1_ct">
-										<a
-											href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html"
-											><b
-												>Triệu đồng chậu cảnh<br />
-												'kim xà nhả long châu'<br />
-												cho Tết Ất Tỵ</b
-											></a
-										>
+									<li class="bds_ct">
+										<a href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html">
+											<b>Triệu đồng chậu cảnh 'kim xà nhả long châu' cho Tết Ất Tỵ</b>
+										</a>
 									</li>
-									<li class="jeju1_ct">
-										<a
-											href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html"
-											><b
-												>Cổ phiếu Jeju Air xuống<br />
-												thấp kỷ lục</b
-											></a
-										>
+									<li class="bds_ct">
+										<a href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html">
+											<b>Cổ phiếu Jeju Air xuống thấp kỷ lục</b>
+										</a>
 									</li>
 								</ul>
 							</nav>
-							<div class="border5"></div>
+						
+							
 						</div>
-						<div class="CTR1">
+						<div class="border4"></div>
+						<div class="CTR3">
 							<nav class="small">
 								<ul class="small1">
 									<li class="small_iteam">
 										<a href="https://vnexpress.net/kinh-doanh"
-											><b>Kinh doanh</b></a
+											><b>Thể thao</b></a
 										>
 									</li>
 									<li class="small_iteam">
 										<a href="https://vnexpress.net/kinh-doanh/quoc-te"
-											>Quốc tế</a
+											>Bóng đá</a
 										>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Doanh nghiệp</a>
+										<a href="https://vnexpress.net/kinh-doanh">Marathon</a>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Hàng hóa</a>
+										<a href="https://vnexpress.net/kinh-doanh">Tennis</a>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Vĩ mô</a>
+										<a href="https://vnexpress.net/kinh-doanh">Lịch thi đấu</a>
 									</li>
 									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh">Ebank</a>
+										<a href="https://vnexpress.net/kinh-doanh">Vleague</a>
 									</li>
-									<li class="small_iteam">
-										<a href="https://vnexpress.net/kinh-doanh"
-											>Hậu trường kinh doanh</a
-										>
-									</li>
+									
 								</ul>
 							</nav>
 							<div class="ct1">
-								<div class="hagl">
-									<div class="hagl_img">
-										<a
-											href="https://vnexpress.net/doanh-nghiep-ong-tran-ba-duong-tra-cong-ty-bau-duc-hon-1-000-ty-dong-4833784.html"
-											><img
-												src="https://i1-kinhdoanh.vnecdn.net/2024/12/30/bau-duc-1735559213-9432-1735559468.jpg?w=380&h=228&q=100&dpr=1&fit=crop&s=0VK4bT6Hmq_2-0Gnic4WaQ"
-												style="width: 225px"
-										/></a>
+								<div class="thethao">
+									<div class="thethao_img">
+										
 									</div>
-									<div class="hagl_pr">
+									<div class="thethao_pr">
 										<h1>
 											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Doanh nghiệp ông Trần Bá Dương trả công ty bầu Đức
-												hơn 1.000 tỷ đồng</a
+												href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
+												>Đội tuyển Việt Nam thắng đậm 5-0</a
 											>
 										</h1>
 										<p>
 											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Hai ngày cuối năm, HAG đã được HNG trả hơn 1.000 tỷ
-												đồng để thanh toán một phần gốc lô trái phiếu do
-												công ty ...</a
+												href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
+												>Đội tuyển Việt Nam có chiến thắng áp đảo trước đối thủ...</a
 											>
 										</p>
 									</div>
-									<div class="wl">
+									<div class="thethao_right">
 										<h1>
 											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Cổ phiếu nhà phân phối ôtô điện Wuling tăng trần
-												liên tiếp</a
+												href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
+												>Messi ghi bàn đẹp mắt</a
 											>
 										</h1>
 										<p>
 											<a
-												href="https://vnexpress.net/chung-khoan-hom-nay-30-12-co-phieu-nha-phan-phoi-oto-dien-wuling-tang-tran-lien-tiep-4833705.html"
-												>Cổ phiếu TMT Motors, nhà phân phối ôtô điện Wuling,
-												khoác sắc tím bốn phiên liền dù công ty thua lỗ
-												...</a
+												href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
+												>Lionel Messi tiếp tục tỏa sáng với một siêu phẩm...</a
 											>
 										</p>
 									</div>
 								</div>
 							</div>
 							<div class="border4"></div>
-							<nav class="jeju">
-								<ul class="jeju1">
-									<li class="jeju1_ct">
+							<nav class="thethao_nav">
+								<ul class="thethao_bottom">
+									<li class="thethao_ct">
 										<a
-											href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html"
+											href="https://vnexpress.net/ronaldo-lap-hat-trick-4833665.html"
 											><b
-												>Hoàng Anh Gia Lai bị phạt<br />
-												và truy thu thuế gần một<br />
-												tỷ đồng</b
+												>Ronaldo lập hat-trick trong<br />
+												trận đấu quan trọng</b
 											></a
 										>
 									</li>
-									<li class="jeju1_ct">
+									<li class="thethao_ct">
 										<a
-											href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html"
+											href="https://vnexpress.net/viet-nam-gianh-hcv-4833665.html"
 											><b
-												>Triệu đồng chậu cảnh<br />
-												'kim xà nhả long châu'<br />
-												cho Tết Ất Tỵ</b
+												>Việt Nam giành HCV tại<br />
+												giải vô địch Đông Nam Á</b
 											></a
 										>
 									</li>
-									<li class="jeju1_ct">
+									<li class="thethao_ct">
 										<a
-											href="https://vnexpress.net/hoang-anh-gia-lai-bi-phat-va-truy-thu-thue-gan-mot-ty-dong-4833665.html"
+											href="https://vnexpress.net/mu-thua-dam-4833665.html"
 											><b
-												>Cổ phiếu Jeju Air xuống<br />
-												thấp kỷ lục</b
+												>MU thua đậm trước<br />
+												đối thủ yếu hơn</b
 											></a
 										>
 									</li>
 								</ul>
 							</nav>
-							<div class="border5"></div>
 						</div>
 						<div class="match_container">
 							<div class="schedule">
