--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,74 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thể Thao</title>
 </head>
+<style>
+.thethao {
+display: flex;
+gap: 10px;
+padding-left: 20px;
+justify-content: space-around;
+}
+.thethao_pr {
+	border-right: 1px solid #e5e5e5;
+	width:200px;
+	padding: 0 10px 0 0;
+}
+.thethao_right {
+	width:200px;
+}
+
+.thethao_bottom {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin-left: 20px;
+}
+.thethao_ct {
+	width:180px;
+	gap:10px;
+}
+.thethao_ct a b {
+	font-size:14px;
+}
+
+.thethao_ct a:hover {
+	color: blue;
+}
+
+</style>
 <body>
-    <div class="main_content">
-        <div class="main_content1">
-            <div class="main_content1_img">
-                <h1>
-                    <img
-                        src="https://i1-thethao.vnecdn.net/2024/12/27/KikeLinaresPHvsThailandLeg-173-9874-6266-1735313904.jpg?w=680&h=408&q=100&dpr=1&fit=crop&s=7seGhdvL0ow-AdeaXAU4aw"
-                    />
-                </h1>
+    <div class="ct1">
+        <div class="thethao">
+            <div class="thethao_img">
+                
             </div>
-            <div class="main_content1_text">
+            <div class="thethao_pr">
                 <h1>
                     <a
-                        href="https://vnexpress.net/thai-lan-thua-philippines-o-phut-bu-cuoi-4832881-tong-thuat.html"
-                        >
-                    </a>
+                        href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
+                        >Đội tuyển Việt Nam thắng đậm 5-0</a
+                    >
                 </h1>
                 <p>
                     <a
-                        href="https://vnexpress.net/thai-lan-thua-philippines-o-phut-bu-cuoi-4832881-tong-thuat.html"
-                        >
-                    </a>
+                        href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
+                        >Đội tuyển Việt Nam có chiến thắng áp đảo trước đối thủ...</a
+                    >
                 </p>
             </div>
-        </div>
-        <div class="main_content2">
-            <div class="main_content2_1">
+            <div class="thethao_right">
+                <h1>
+                    <a
+                        href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
+                        >Messi ghi bàn đẹp mắt</a
+                    >
+                </h1>
                 <p>
                     <a
-                        href="https://vnexpress.net/tau-dien-ben-thanh-suoi-tien-dung-chay-do-mua-lon-4832884.html"
-                    >
-                       </a
-                    >
-                </p>
-                <img
-                    src="https://i1-vnexpress.vnecdn.net/2024/12/27/z6172255553984-7ae3a0814a6b683-2987-2792-1735303217.jpg?w=300&h=180&q=100&dpr=1&fit=crop&s=0CLVEUGC4HCyjgr-ZTWT5Q"
-                />
-            </div>
-            <div class="main_content2_2">
-                <p>
-                    <a
-                        href="https://vnexpress.net/thu-tuong-phan-dau-tang-truong-gdp-nam-sau-dat-hai-chu-so-4832866.html"
-                    >
-                       </a
+                        href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
+                        >Lionel Messi tiếp tục tỏa sáng với một siêu phẩm...</a
                     >
                 </p>
-                <img
-                    src="https://i1-kinhdoanh.vnecdn.net/2024/12/01/thutuong-1733034517-1733034530-1879-1733034640.jpg?w=180&h=108&q=100&dpr=1&fit=crop&s=gO5VphzoNhu9s0sh3X5H8g"
-                />
-            </div>
-            <div class="main_content2_3">
-                <p class="title"></p>
-                <p1></p1><br />
-                <p2
-                    ></p2
-                >
-                <div class="jesse">
-                    <a
-                        href="https://vnexpress.net/tac-gia/jesse-peterson-1050.html"
-                    ></a>
-                    <img
-                        src="https://i1-vnexpress.vnecdn.net/2017/11/17/jessepngpng-1510857625.png?w=100&h=100&q=100&dpr=2&fit=crop&s=Idkqaz_9ddgZIHvmwYxIBQ"
-                    />
-                </div>
             </div>
         </div>
     </div>
+    <div class="border4"></div>
+    <nav class="thethao_nav">
+        <ul class="thethao_bottom">
+            <li class="thethao_ct">
+                <a
+                    href="https://vnexpress.net/ronaldo-lap-hat-trick-4833665.html"
+                    ><b
+                        >Ronaldo lập hat-trick trong<br />
+                        trận đấu quan trọng</b
+                    ></a
+                >
+            </li>
+            <li class="thethao_ct">
+                <a
+                    href="https://vnexpress.net/viet-nam-gianh-hcv-4833665.html"
+                    ><b
+                        >Việt Nam giành HCV tại<br />
+                        giải vô địch Đông Nam Á</b
+                    ></a
+                >
+            </li>
+            <li class="thethao_ct">
+                <a
+                    href="https://vnexpress.net/mu-thua-dam-4833665.html"
+                    ><b
+                        >MU thua đậm trước<br />
+                        đối thủ yếu hơn</b
+                    ></a
+                >
+            </li>
+        </ul>
+    </nav>
+    
 </body>
 </html>
