--- a/src/views/homepage.html
+++ b/src/views/homepage.html
@@ -334,13 +334,14 @@
 						
 					</div>
 					<div class="supporting_content_right">
-						<div class="CTR1">
+						<div class="CTR0">
 							<nav class="small">
 								<ul class="small1">
 									<li class="small_iteam">
 										<a href="https://vnexpress.net/kinh-doanh"
-											><b>Kinh doanh</b></a
-										>
+											><h1><b>Kinh doanh</b></h1>
+										</a>
+										
 									</li>
 									<li class="small_iteam">
 										<a href="https://vnexpress.net/kinh-doanh/quoc-te"
@@ -449,8 +450,8 @@
 									<li class="laisuat3">
 										<a
 											href="https://vnexpress.net/chu-de/lai-suat-ngan-hang-3210"
-										></a
-										>Lãi suất tiết kiệm tại quầy >>
+										>Lãi suất tiết kiệm tại quầy >></a
+										>
 									</li>
 									<li class="laisuat3">Tháng 1</li>
 									<li class="laisuat3">Tháng 3</li>
@@ -465,7 +466,7 @@
 											<a
 												href="https://vnexpress.net/kinh-doanh/net-zero/cam-nang-net-zero"
 											></a
-											>NetZero
+											><h3>NetZero</h3>
 										</li>
 										<li class="net2">
 											<a
@@ -509,7 +510,7 @@
 										</h1>
 									</div>
 									<div class="usd2">
-										<p style="font-size: 15px">
+										<p style="font-size: 14px">
 											<a href="https://vnexpress.net/"
 												>10 thử thách vì môi trường có thể làm ngay năm
 												2025</a
@@ -520,7 +521,7 @@
 							</div>
 							<div class="border5"></div>
 						</div>
-						<div class="CTR1">
+						<div class="CTR2">
 							<nav class="small">
 								<ul class="small1">
 									<li class="small_iteam">
@@ -701,121 +702,109 @@
 							<div class="schedule">
 								<button class="schedule-button schedule-button-prev">&lt;</button>
 								<div class="matches">
-									<div class="match">
-										<span class="time">Hôm nay, 20:00</span>
-										<div class="teams">
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Viet_Nam.png"
-													alt="Việt Nam"
-												/>VietNam
-											</span>
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>Thái Lan
-											</span>
-										</div>
-									</div>
-									<div class="match">
-										<span class="time">Thứ bảy, 4/1, 03:00</span>
-										<div class="teams">
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Valencia
-											</span>
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Real Madrid
-											</span>
-										</div>
-									</div>
-									<div class="match">
-										<span class="time">Thứ bảy, 4/1, 19:30</span>
-										<div class="teams">
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Tottenham
-											</span>
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Newcastle
-											</span>
-										</div>
-									</div>
-									<div class="match">
-										<span class="time">Hôm nay, 20:00</span>
-										<div class="teams">
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Viet_Nam.png"
-													alt="Việt Nam"
-												/>VietNam
-											</span>
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>Thái Lan
-											</span>
-										</div>
-									</div>
-									<div class="match">
-										<span class="time">Thứ bảy, 4/1, 03:00</span>
-										<div class="teams">
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Valencia
-											</span>
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Real Madrid
-											</span>
-										</div>
-									</div>
-									<div class="match">
-										<span class="time">Thứ bảy, 4/1, 19:30</span>
-										<div class="teams">
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Tottenham
-											</span>
-											<span class="team">
-												<img
-													src="https://s1.vnecdn.net/vnexpress/restruct/i/v9540/flag/Thai_Lan.png"
-													alt="Thái Lan"
-												/>
-												Newcastle
-											</span>
-										</div>
-									</div>
+									
 								</div>
 
 								<button class="schedule-button schedule-button-next">&gt;</button>
 							</div>
 						</div>
+						<div class="CTR3">
+							<nav class="small">
+								<ul class="small1">
+									<li class="small_iteam">
+										<a href="https://vnexpress.net/kinh-doanh"
+											><b>Thể thao</b></a
+										>
+									</li>
+									<li class="small_iteam">
+										<a href="https://vnexpress.net/kinh-doanh/quoc-te"
+											>Bóng đá</a
+										>
+									</li>
+									<li class="small_iteam">
+										<a href="https://vnexpress.net/kinh-doanh">Marathon</a>
+									</li>
+									<li class="small_iteam">
+										<a href="https://vnexpress.net/kinh-doanh">Tennis</a>
+									</li>
+									<li class="small_iteam">
+										<a href="https://vnexpress.net/kinh-doanh">Lịch thi đấu</a>
+									</li>
+									<li class="small_iteam">
+										<a href="https://vnexpress.net/kinh-doanh">Vleague</a>
+									</li>
+									
+								</ul>
+							</nav>
+							<div class="ct1">
+								<div class="giaitri">
+									<div class="giaitri_img">
+										
+									</div>
+									<div class="giaitri_pr">
+										<h1>
+											<a
+												href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
+												>Đội tuyển Việt Nam thắng đậm 5-0</a
+											>
+										</h1>
+										<p>
+											<a
+												href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
+												>Đội tuyển Việt Nam có chiến thắng áp đảo trước đối thủ...</a
+											>
+										</p>
+									</div>
+									<div class="giaitri_right">
+										<h1>
+											<a
+												href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
+												>Messi ghi bàn đẹp mắt</a
+											>
+										</h1>
+										<p>
+											<a
+												href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
+												>Lionel Messi tiếp tục tỏa sáng với một siêu phẩm...</a
+											>
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="border4"></div>
+							<nav class="giaitri_nav">
+								<ul class="giaitri_bottom">
+									<li class="giaitri_ct">
+										<a
+											href="https://vnexpress.net/ronaldo-lap-hat-trick-4833665.html"
+											><b
+												>Ronaldo lập hat-trick trong<br />
+												trận đấu quan trọng</b
+											></a
+										>
+									</li>
+									<li class="giaitri_ct">
+										<a
+											href="https://vnexpress.net/viet-nam-gianh-hcv-4833665.html"
+											><b
+												>Việt Nam giành HCV tại<br />
+												giải vô địch Đông Nam Á</b
+											></a
+										>
+									</li>
+									<li class="giaitri_ct">
+										<a
+											href="https://vnexpress.net/mu-thua-dam-4833665.html"
+											><b
+												>MU thua đậm trước<br />
+												đối thủ yếu hơn</b
+											></a
+										>
+									</li>
+								</ul>
+							</nav>
+						</div>
+						
 					</div>
 				</div>
 				<div class="border5"></div>
