--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,50 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thể Thao</title>
+    <title>Giải Trí</title>
 </head>
 <style>
-.thethao {
+.giaitri {
 display: flex;
 gap: 10px;
 padding-left: 20px;
 justify-content: space-around;
 }
-.thethao_pr {
+.giaitri h1 a{
+		font-size: 14px;
+		line-height: 1.2;
+		display: block;
+}
+.giaitri_pr {
 	border-right: 1px solid #e5e5e5;
 	width:200px;
 	padding: 0 10px 0 0;
 }
-.thethao_right {
+.giaitri_right {
 	width:200px;
 }
 
-.thethao_bottom {
+.giaitri_bottom {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
 	margin-left: 20px;
 }
-.thethao_ct {
+.giaitri_ct {
 	width:180px;
 	gap:10px;
 }
-.thethao_ct a b {
+.giaitri_ct a b {
 	font-size:14px;
 }
 
-.thethao_ct a:hover {
+.giaitri_ct a:hover {
 	color: blue;
 }
 
 </style>
 <body>
     <div class="ct1">
-        <div class="thethao">
-            <div class="thethao_img">
+        <div class="giaitri">
+            <div class="giaitri_img">
                 
             </div>
-            <div class="thethao_pr">
+            <div class="giaitri_pr">
                 <h1>
                     <a
                         href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
@@ -60,7 +65,7 @@ justify-content: space-around;
                     >
                 </p>
             </div>
-            <div class="thethao_right">
+            <div class="giaitri_right">
                 <h1>
                     <a
                         href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
@@ -77,9 +82,9 @@ justify-content: space-around;
         </div>
     </div>
     <div class="border4"></div>
-    <nav class="thethao_nav">
-        <ul class="thethao_bottom">
-            <li class="thethao_ct">
+    <nav class="giaitri_nav">
+        <ul class="giaitri_bottom">
+            <li class="giaitri_ct">
                 <a
                     href="https://vnexpress.net/ronaldo-lap-hat-trick-4833665.html"
                     ><b
@@ -88,7 +93,7 @@ justify-content: space-around;
                     ></a
                 >
             </li>
-            <li class="thethao_ct">
+            <li class="giaitri_ct">
                 <a
                     href="https://vnexpress.net/viet-nam-gianh-hcv-4833665.html"
                     ><b
@@ -97,7 +102,7 @@ justify-content: space-around;
                     ></a
                 >
             </li>
-            <li class="thethao_ct">
+            <li class="giaitri_ct">
                 <a
                     href="https://vnexpress.net/mu-thua-dam-4833665.html"
                     ><b
